--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-file-uploader": "^2.4.4",
     "sass": "^1.32.8"
   }
 }
